Update celebration message with heartfelt quotes

--- a/index.html
+++ b/index.html
@@ -259,8 +259,16 @@
         <h1 style="font-size: 4rem;">YAY! 🎉</h1>
         <h2>Galentine’s Date Confirmed.</h2>
         <div style="margin-top: 30px; font-size: 1.2rem;">
-            <p><strong>When:</strong> Whenever you want jaanemann</p>
-            <p><strong>Where:</strong> Our favorite spot</p>
+            <p><strong>Be my forever</strong>“With you, everything feels softer and brighter.” ✨
+
+“You’re my favorite kind of forever.” 💫
+
+“Life feels lighter when you’re next to me.” 🌷
+
+“You don’t just make my day… you make my world.” 🌍
+
+“If I had to choose again, I’d still choose you.” 💞</p>
+    
             <p style="margin-top: 20px;">I like me better when I'm with you! 💖</p>
         </div>
     </section>
