Update memory cards with personalized messages

--- a/index.html
+++ b/index.html
@@ -220,13 +220,14 @@
         <div class="memory-container">
             <div class="memory-card">
                 <span class="emoji">😂</span>
-                <h3>Chaotic Laughs</h3>
-                <p>Those temporary characters gave us permanent gossips and laughter.</p>
+                <h3>Our fights</h3>
+                <p> “We fight. We cry. We laugh. We stay.
+Fights todayyy..aprm icecream sapduvom.Still ur my person.</p>
             </div>
             <div class="memory-card">
                 <span class="emoji">🎀</span>
-                <h3>Late Night Talks</h3>
-                <p>Those late night rants and tea spilling sessions that sometimes end up with some deep conversations.</p>
+                <h3>Night Talks and walks </h3>
+                <p>Those late night rants and sometimes end up with some deep conversations and i miss our walks.</p>
             </div>
             <div class="memory-card">
                 <span class="emoji">🌸</span>
@@ -235,7 +236,7 @@
             </div>
             <div class="memory-card">
                 <span class="emoji">💅</span>
-                <h3>Always Cheering</h3>
+                <h3>Always Love you</h3>
                 <p> remember that babygurl.</p>
             </div>
         </div>
